...

    func showAlertDeniedPermissions(_ button: UISwitch, permissionName: String) {
        updateSwitchStatus(button, status: .denied)
        let alertController = UIAlertController(title: "Permission for was denied.",
            message: "Please enable access to in the Settings app",
            preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "OK",
            style: .cancel,
            handler: nil))
        alertController.addAction(UIAlertAction(title: "Show me",
            style: .default,
            handler: { action in
                self.goToApplicationsSettings()
...
